@@ -3,7 +3,7 @@
 <html>
 <head>
 <title>Hypermail - hmrc list configuration</title>
-<link rev="made" href="mailto:hypermail-bugs@hypermail.org">
+<link rev="made" href="mailto:hypermail@hypermail-project.org">
 </head>
 <body bgcolor="#ffffff" text="#000000">
 <h1 align=center><img src="hypermail.png" width="60" align="middle" height="60" alt="">&nbsp;&nbsp;&nbsp;Hypermail List Configuration File</h1>
@@ -1259,7 +1259,7 @@ inbound messages before it is overridden.
 the latest_folder option is used and the folder_by_date makes
 directories more than one level deep (e.g. with '%y/%m').
 <br>
-<br><i>base_url = http://www.hypermail.org/mail-archive/</i>
+<br><i>base_url = http://www.hypermail-project.org/mail-archive/</i>
 </dd>
 <a name="report_new_folder"></a>
 <dt><strong>report_new_folder = [ 0 | 1 ]</strong></dt><dd>
