@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE>Hypermail Frequently Asked Questions</TITLE>
-<LINK REV="made" HREF="mailto:archive@hypermail.org">
+<LINK REV="made" HREF="mailto:hypermail@hypermail-project.org">
 <META name="description" content="Hypermail Related Software Tools">
 <META name="keywords" content="Hypermail tools, email tools, conversion software, checking Hypermail configurations">
 </HEAD>
@@ -94,8 +94,8 @@ these days as a Hypermedia Engineer at Veo Systems.
 <P>
 <H3><A HREF="#" NAME="5">5. What is the latest version of Hypermail ?</A></H3>
 <P>
-The latest stable version of Hypermail is Version 2.1.8. It is available from
-<A HREF="http://www.hypermail.org/dist/">http://www.hypermail.org/dist/</A>
+The latest stable version of Hypermail is Version 2.1.9. It is available from
+<A HREF="http://www.hypermail-project.org">http://www.hypermail-project.org</A>
 
 <P ALIGN=CENTER><IMG SRC="hr.yellow.png" WIDTH=300 HEIGHT=2 ALT="----"></P>
 <P>
@@ -107,7 +107,7 @@ Center at
 <a href="http://sourceforge.net/projects/hypermail/">SourceForge</a>
 and/or at
 <P ALIGN=CENTER>
-<A HREF="http://www.hypermail.org/dist/">http://www.hypermail.org/dist/</A>
+<A HREF="http://www.hypermail-project.org">http://www.hypermail-project.org/</A>
 </P>
 
 It and past versions are also available via FTP from
@@ -331,9 +331,9 @@ Then run hypermail using the config file by:
 <H3><A HREF="#" NAME="14">Why is the downloaded file name different when I download hypermail.tar.gz ?</A></H3>
 <P>
 <EM>
-The FAQ says: The source is available via FTP from 
+The source is available from 
 <BLOCKQUOTE>
-<A HREF="ftp://ftp.hypermail.org/hypermail/hypermail.tar.gz">ftp.hypermail.org/hypermail/hypermail.tar.gz</A>
+<A HREF="http://www.hypermail-project.org/hypermail.tar.gz">www.hypermail.org/hypermail.tar.gz</A>
 </BLOCKQUOTE>
 However: When downloading though IE v4 browser on an NT 
 PC, you get a file called hypermail_tar.tar.
@@ -407,7 +407,7 @@ your web page (although this search produces results from an entire site,
 not just the email archive):
 <br>&lt;form action=http://www.google.com/search&gt;
 <br>&lt;input type=text name=as_q&gt;
-<br>&lt;input type=hidden name=as_sitesearch value=hypermail.org&gt;
+<br>&lt;input type=hidden name=as_sitesearch value=hypermail-project.org&gt;
 <br>&lt;input type=submit value=&quot;Search Hypermail&quot;&gt;
 <br>&lt;/form>
 <p>
@@ -489,9 +489,11 @@ deleted = "X-Hypermail-Deleted"
 <ADDRESS>
 <STRONG>
 Do you have a Hypermail related question you'd like to see listed here ?
-If so send mail to
-<A HREF="mailto:archive@hypermail.org">archive@hypermail.org</A> 
+If so send mail to the Hypermail mailing list
+<A HREF="mailto:hypermail@hypermail-project.org">hypermail@hypermail-project.org</A> 
 &nbsp;&nbsp;(preferably with the answers).
+You will need to subscribe to the list by sending a message with the word
+"subscribe" in the Subject: field to hypermail-request@hypermail-project.org.
 </STRONG>
 </ADDRESS>
 </DIV>
