@@ -3,7 +3,7 @@
 <HTML>
 <HEAD>
 <TITLE>Hypermail Documentation</TITLE>
-<LINK REV="made" HREF="mailto:webmaster@hypermail.org">
+<LINK REV="made" HREF="mailto:webmaster@hypermail-project.org">
 </HEAD>
 <BODY BGCOLOR="#ffffff" TEXT="#000000">
 <H1 ALIGN=CENTER><IMG SRC="hypermail.png" ALIGN="middle" WIDTH="60" HEIGHT="60" ALT="">&nbsp;&nbsp;Hypermail</H1>
@@ -54,13 +54,13 @@ In addition, Hypermail will convert references in each message to email addresse
 <P>
 To complement each set of HTML messages, four index files are created which sort the articles by date received, thread, subject, and author. Each entry in these index files are links to the individual articles and provide a bird's-eye view of every archived message.
 <P>
-Hypermail was originally developed and designed by <A HREF="mailto:gruber@intraspect.com">Tom Gruber</A> for Enterprise Integration Technologies (EIT) in Common Lisp. It was later rewritten in C by <A HREF="mailto:kev@kevcom.com">Kevin Hughes</A> while at EIT. Hypermail is now being maintained by Kent Landfield <A HREF="mailto:kent@landfield.com">&lt;kent@landfield.com&gt;</A>.
+Hypermail was originally developed and designed by <A HREF="mailto:gruber@intraspect.com">Tom Gruber</A> for Enterprise Integration Technologies (EIT) in Common Lisp. It was later rewritten in C by <A HREF="mailto:kev@kevcom.com">Kevin Hughes</A> while at EIT. Hypermail is now being maintained by Peter McCluskey <A HREF="mailto:pcm@rahul.net">&lt;pcm@rahul.net&gt;</A>.
 <P>
 
 To see what Hypermail can do, take a look at these Hypermail-produced archives:
 <P>
 <UL>
-<LI><A HREF="http://www.hypermail.org/mail-archive/">Hypermail Development Archives</A>
+<LI><A HREF="http://www.hypermail-project.org/archive/">Hypermail Development Archives</A>
 <LI><A HREF="http://www.landfield.com/wu-ftpd/mail-archive/">WU-FTPD Mailing list Archives</A>
 <LI><A HREF="http://www.faqs.org/faq-maintainers/mail-archive">FAQ Maintainers Archives</A>
 </UL>
@@ -557,7 +557,7 @@ There is no limit to how often the &lt;HTML&gt; tag can be used in an article.
 If you are are looking for more information on Hypermail and its features and
 developmental status, check out
 <a href="http://sourceforge.net/projects/hypermail/">SourceForge: Project Info - hypermail</a>
-and <a href="http://www.hypermail.org">hypermail.org</a>. Additional
+and <a href="http://www.hypermail-project.org">hypermail-project.org</a>. Additional
 documentation and the hypermail development list archives are available there.
 
 <P>
@@ -571,11 +571,8 @@ about the GPL are available at <A HREF="http://www.fsf.org/copyleft/gpl.html">ht
 <P>
 Currently, <a href="http://sourceforge.net/projects/hypermail/">SourceForge: Project Info - hypermail</a>
 has the most recent version.
-<p>
-A version (probably older) is also available via FTP from 
-<A HREF="ftp://ftp.hypermail.org/hypermail/hypermail.tar.gz">ftp.hypermail.org/hypermail/hypermail.tar.gz</A>.
 <P>
-<A HREF="http://www.hypermail.org/">The Hypermail Development Center</A> also has beta development versions of hypermail available from time to time.
+<A HREF="http://www.hypermail-project.org/">The Hypermail Development Center</A> also has beta development versions of hypermail available from time to time.
 
 <P>
 <HR>
@@ -594,7 +591,7 @@ There are a great deal of people that also contributed to Hypermail's developmen
 The <A HREF="http://www.hypermail.org/hypermail/credits.html">Hypermail Development Center Credits</A> page is an attempt to let you know just who they are. 
 <P>
 Hypermail development is currently being fostered by
-<A HREF="mailto:kent@landfield.com">&lt;Kent Landfield&gt;</A>.
+<A HREF="mailto:pcm@rahul.net">&lt;Peter McCluskey&gt;</A>.
 
 <P>
 
@@ -618,11 +615,13 @@ and <STRONG><A HREF="archive_search.html">Adding a Search Engines to your Hyperm
 <P>
 <EM>
 Please send any feature requests, bug fixes, and comments on Hypermail 
-to <A HREF="mailto:hypermail-bugs@hypermail.org">&lt;hypermail-bugs@hypermail.org&gt;</A>.
+to <A HREF="mailto:hypermail@hypermail-project.org">&lt;hypermail@hypermail-project.org&gt;</A>.
+You will need to subscribe to the list by sending a message with the word
+"subscribe" in the Subject: field to hypermail-request@hypermail-project.org.
 </EM>
 <P>
 <SMALL><EM><STRONG>
-Last updated December 26, 2001
+Last updated May 24, 2004
 </STRONG></EM></SMALL>
 
 </BODY>
