@@ -1,6 +1,13 @@
 Version Changes for Hypermail
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+============================
+HYPERMAIL VERSION 2.2.0:
+============================
+ Peter McCluskey (May 25, 2004)
+  Changed some of the addresses to hypermail-project.org.
+  Made the "We delete ... " message print only if progress != 0.
+
  Peter McCluskey (Mar 23, 2004)
    Changes to speed up incremental update when there are deleted files if
   using usegdbm (it's still slow if usegdbm = 0).
